# patha

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
assets/: demo-portability.tape  demo-supersession.tape  demo-synthesis.tape
docs/: benchmarks.md  e2e-test-claude-desktop.md  how-to-use-patha.md  innovations.md  mcp.md  phase_2_literature_survey.md  phase_2_spec.md  phase_2_v01_results.md  phase_2_v02_results.md  phase_2_v03_results.md  phase_2_v04_results.md  phase_2_v04_roadmap.md  phase_2_v05_results.md  phase_2_v06_results.md  phase_2_v07_results.md  phase_3_plan.md  phase_4_dogfood.md  publish-to-pypi.md  roadmap.md
docs/launch/: demo-video-storyboards.md  frontier-llm-run.md  mcp-registry-submission.md
docs/releases/: v0.10.1.md  v0.10.2.md  v0.10.3.md  v0.10.4.md  v0.10.5.md  v0.10.6.md  v0.10.7.md  v0.10.8.md  v0.10.9.md  v0.11.0.md
eval/: __init__.py  ablations.py  absence_answerer.py  absence_eval.py  analogy_answerer.py  analogy_eval.py  analyze.py  answer_eval.py  belief_eval.py  belief_eval_integrated.py  compare_hebbian.py  composition_eval.py  debug_karana_185.py  evolution_eval.py  false_contradiction_eval.py  ganita_synthesis_smoke.py  karana_eval.py  longmemeval_belief.py  longmemeval_diagnose.py  longmemeval_integrated.py  make_stratified.py  metrics.py  multisession_diagnosis.py  non_commutative_eval.py  plasticity_ablations.py  plasticity_benchmark.py  plasticity_on_real_logs.py  rescore.py  router_eval.py  run_answer_eval.py  runner.py  token_economy.py
eval/absence_data/: README.md  author_dev.py  dev_scenarios.jsonl
eval/analogy_data/: README.md  author_dev.py  dev_scenarios.jsonl
eval/belief_eval_data/: false_contradiction_pairs.jsonl  generate_scenarios.py  seed_scenarios.jsonl  supersession_negatives_expanded.jsonl  supersession_positives_expanded.jsonl  v03_scenarios.jsonl  v05_combined_300.jsonl  v05_hand_curated.jsonl
eval/composition_data/: README.md  dev_scenarios.jsonl
eval/evolution_data/: README.md  author_batch2.py  dev_scenarios.jsonl  generate_scenarios.py  heldout_batch2.jsonl  heldout_scenarios.jsonl
eval/karana_data/: README.md  author_dev.py  gold_cases.jsonl
eval/router_data/: README.md  dev_questions.jsonl
eval/viewer/: app.py
examples/: belief_layer_demo.py  developer_quickstart.py  mcp_config_example.json  three_innovations_demo.py
scripts/: verify_install.sh
src/patha/: __init__.py  cli.py  demo.py  importers.py  install.py  integrated.py  mcp_server.py  phase1_bridge.py
src/patha/belief/: __init__.py  abhava.py  adhyasa.py  adhyasa_detector.py  anupalabdhi.py  composition.py  contradiction.py  counterfactual.py  detector_factory.py  direct_answer.py  ganita.py  itihasa.py  karana.py  layer.py  learned_supersession.py  llm_judge.py  numerical_detector.py  ollama_judge.py  plasticity.py  pramana.py  raw_archive.py  refinement_veto.py  revision_patterns.py  (+9 more)
tests/: test_absence_eval.py  test_analogy_eval.py  test_answer_eval.py  test_cli.py  test_composition_eval.py  test_embedder.py  test_enriched_pipeline.py  test_enrichment.py  test_eval.py  test_evolution_eval.py  test_importers.py  test_ingest.py  test_install_mcp.py  test_karana_eval.py  test_mcp_protocol.py  test_memory_api.py  test_narrative_recall.py  test_narrative_walk.py  test_phase1_bridge.py  test_propositionizer.py  test_reranker.py  test_retrieval.py  test_router_eval.py  test_run_answer_eval.py  test_songline.py  test_store.py  test_topics.py  test_views.py
tests/belief/: test_abhava.py  test_adhyasa.py  test_adhyasa_detector.py  test_anupalabdhi.py  test_belief_eval.py  test_composition.py  test_confidence_weighted.py  test_contextuality.py  test_contradiction.py  test_counterfactual.py  test_counterfactual_reingest.py  test_direct_answer.py  test_ganita.py  test_hebbian_expansion.py  test_ingest_window.py  test_innovations_compose.py  test_integrated.py  test_integrated_archive.py  test_integration.py  test_itihasa.py  test_karana.py  test_karana_depparse.py  test_karana_ollama_live.py  test_layer.py  test_learned_supersession.py  test_llm_judge.py  test_numerical_detector.py  test_ollama_judge.py  test_plasticity.py  test_plasticity_wiring.py  test_pramana.py  test_pramana_hierarchy.py  test_raw_archive.py  test_refinement_veto.py  test_revision_patterns.py  test_samskara_vasana.py  test_semantic_filter.py  test_sequential_detector.py  test_store.py  test_token_economy.py  (+7 more)
tests/fixtures/: synthetic_longmemeval.json
(+25 files in other folders)
