[project]
name = "patha"
version = "0.1.0"
description = "Vedic/Aboriginal-inspired AI memory system targeting 99% R@5 on LongMemEval"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "stefi" }]

dependencies = [
    # vector store + sparse retrieval
    "lancedb>=0.13",
    "pyarrow>=17.0",
    "bm25s>=0.2",
    # embedders + reranker runtime
    "torch>=2.3",
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    # nlp
    "spacy>=3.7",
    "dateparser>=1.2",
    # numerics
    "numpy>=1.26",
    "scikit-learn>=1.5",
    # io / config
    "pyyaml>=6.0",
    "orjson>=3.10",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# late-interaction verifier (heavy, optional until Phase 2)
colbert = ["colbert-ai>=0.2.21"]
# offline batched inference runtime
vllm = ["vllm>=0.6"]
# dev / test / eval viewer
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "streamlit>=1.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patha"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: integration tests that load large models or run long-running work. Skipped by default; run with `pytest -m slow` or `-m ''` for everything.",
]
