[project]
name = "patha"
version = "0.9.3"
description = "Local-first AI memory with contradiction detection, non-destructive supersession, and empirically non-commutative belief evolution. Plugs into any MCP-compatible AI tool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "stefi", email = "autotelicbydesign@gmail.com" }]
keywords = [
    "memory", "ai", "llm", "mcp", "belief-layer", "contradiction-detection",
    "supersession", "claude", "retrieval", "rag", "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # vector store + sparse retrieval
    "lancedb>=0.13",
    "pyarrow>=17.0",
    "bm25s>=0.2",
    # embedders + reranker runtime
    "torch>=2.3",
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    # nlp
    "spacy>=3.7",
    "dateparser>=1.2",
    # numerics
    "numpy>=1.26",
    "scikit-learn>=1.5",
    # io / config
    "pyyaml>=6.0",
    "orjson>=3.10",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# late-interaction verifier (heavy, optional until Phase 2)
colbert = ["colbert-ai>=0.2.21"]
# offline batched inference runtime
vllm = ["vllm>=0.6"]
# MCP server — plugs Patha into Claude Desktop / Code / Cursor / Zed / Goose
mcp = [
    "mcp>=1.0",
]
# Streamlit belief viewer — visual inspection of the belief store
viewer = [
    "streamlit>=1.38",
    "pyvis>=0.3",
    "plotly>=5.20",
    "pandas>=2.0",
    "networkx>=3.2",
]
# dev / test / eval viewer
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "streamlit>=1.38",
]

[project.scripts]
patha = "patha.cli:main"
patha-mcp = "patha.mcp_server:main"
patha-viewer = "patha.viewer.app:main"

[project.urls]
Homepage = "https://github.com/autotelicbydesign/patha"
Repository = "https://github.com/autotelicbydesign/patha"
Issues = "https://github.com/autotelicbydesign/patha/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patha"]

[tool.hatch.build.targets.wheel.force-include]
"src/patha/belief/_models/supersession_classifier.joblib" = "patha/belief/_models/supersession_classifier.joblib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: integration tests that load large models or run long-running work. Skipped by default; run with `pytest -m slow` or `-m ''` for everything.",
]
